[package]
name = "rusty_zigbee_dongle"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport  = {git = "https://github.com/serialport/serialport-rs", rev="18f5c2ab5e2b08d839fd6dd0d4c5624778da593b"}
psila-data  = {git = "https://github.com/blueluna/psila.git", rev = "9b87f44d3bad1ce04c8b4fae1e6e6819843db1cb", optional=true}
ieee802154  = {version="0.6.1", optional=true}
futures     = {version="0.3.3", features=["thread-pool"]}
log         = {version = "0.4.22", default-features = false, optional = true}
#quote      = {version = "1.0.37"}
#syn        = {version = "2.0.77"}
serde       = {version = "1.0.210", features = ["derive"]}

[dev-dependencies]
env_logger  = { version = "0.11.5", default-features = false, features = ["auto-color"] }

[features]
default = ["cc2531x", "psila", "log"]
psila = ["psila-data", "ieee802154"]
cc2531x = []
usbportinfo-interface = []
log = ["dep:log"]
